traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(!(getDirection() == Direction.EST))
  ^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    {gauche()}
    ^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!(estFaceMur()))
  ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    {res=false}
    ^Snake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^Snake:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!(estFaceMur()))
  ^Snake:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    {res=false}
    ^Snake:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite()
  ^Snake:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return(res)
  ^